[gd_scene load_steps=3 format=2]

[ext_resource path="res://gui/settings_page.gd" type="Script" id=1]
[ext_resource path="res://gui/main.tres" type="Theme" id=2]

[node name="settings_page" type="Node2D"]
script = ExtResource( 1 )

[node name="but_container" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_right = 240.0
margin_bottom = 128.0
rect_min_size = Vector2( 240, 128 )
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="ItemList" type="ItemList" parent="but_container"]
margin_right = 240.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 64 )

[node name="full_scr_but" type="CheckButton" parent="but_container"]
margin_top = 68.0
margin_right = 240.0
margin_bottom = 108.0
text = "Full screen"

[node name="save_but" type="Button" parent="but_container"]
margin_top = 112.0
margin_right = 240.0
margin_bottom = 139.0
theme = ExtResource( 2 )
text = "Save"

[node name="back_but" type="Button" parent="but_container"]
margin_top = 143.0
margin_right = 240.0
margin_bottom = 170.0
theme = ExtResource( 2 )
text = "Back"
[connection signal="item_selected" from="but_container/ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="toggled" from="but_container/full_scr_but" to="." method="_on_full_scr_but_toggled"]
[connection signal="pressed" from="but_container/save_but" to="." method="_on_save_but_pressed"]
[connection signal="pressed" from="but_container/back_but" to="." method="_on_back_but_pressed"]
